--- a/supplyinvoice.html
+++ b/supplyinvoice.html
@@ -10,102 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .sidebar {
-            background-color: #f1f7f3;
-            height: 91vh;
-            padding: 20px;
-            padding-top: 50px;
-            transition: margin-left 0.3s ease;
-        }
-
-        .sidebar a {
-            display: block;
-            color: #47925b;
-            text-decoration: none;
-            font-size: 12px;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .sidebar a:hover {
-            background-color: #e4ebf1;
-            color: #86ec83;
-        }
-
-        .sidebar:hover {
-            margin-left: 0;
-        }
-
-        .content {
-            margin-left: 220px;
-            padding: 20px;
-        }
-
-        header {
-            background-color: #e4ebf1;
-            color: #468a51;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 0px !important;
-        }
-
-        header .logo {
-            font-size: 1.5rem;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-        }
-
-        header .logo img {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
-
-        header .title {
-            font-size: 1.25rem;
-            font-weight: 500;
-            text-align: center;
-            flex-grow: 1;
-        }
-
-        header .user {
-            font-size: 1rem;
-            display: flex;
-            align-items: center;
-        }
-
-        header .user i {
-            margin-right: 10px;
-        }
-
-        header .user .notification {
-            margin-left: 15px;
-        }
-
-        @media (max-width: 768px) {
-            .sidebar {
-                margin-left: -220px;
-            }
-
-            .content {
-                margin-left: 0;
-            }
-
-            .sidebar:hover {
-                margin-left: 0;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -173,7 +77,7 @@
         <div class="container">
             <div class="sidebyside">
                 <div class="allblock">
-                    <header>
+                    <header style="background-color: white !important;">
                         <h1>Supplier Invoice Details</h1>
                         <div class="action-buttons">
                             <button id="editInvoice"><i class="fas fa-edit"></i> Edit</button>
