--- a/supply.html
+++ b/supply.html
@@ -11,7 +11,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-</head>
 <body>
     <header>
         <div class="logo">
@@ -30,9 +29,9 @@
                 <div class="col-md-2 sidebar"  >
                     <a href="#"><i class="fas fa-home me-2"></i> <span class="texthidemob">Summary</span></a>
                     <a href="#"><i class="fas fa-building me-2"></i> <span class="texthidemob">Construction Area</span></a>
-                    <a href="#"><i class="fas fa-users me-2"></i> <span class="texthidemob">Employees Database</span></a>
-                    <a href="#"><i class="fas fa-boxes me-2"></i> <span class="texthidemob">Material Database</span></a>
-                    <a href="#"><i class="fas fa-truck me-2"></i> <span class="texthidemob">Suppliers Details</span></a>
+                    <a href="Employee.html"><i class="fas fa-users me-2"></i> <span class="texthidemob">Employees Database</span></a>
+                    <a href="material.html"><i class="fas fa-boxes me-2"></i> <span class="texthidemob">Material Database</span></a>
+                    <a href="supply.html"><i class="fas fa-truck me-2"></i> <span class="texthidemob">Suppliers Details</span></a>
                     <a href="#"><i class="fas fa-address-card me-2"></i> <span class="texthidemob">Customers Details</span></a>
                     <a href="#"><i class="fas fa-dollar-sign me-2"></i> <span class="texthidemob">Finance</span></a>
                 </div>
