--- a/supplyinvoice.html
+++ b/supplyinvoice.html
@@ -124,9 +124,9 @@
                 <div class="col-md-2 sidebar">
                     <a href="#"><i class="fas fa-home me-2"></i> Summary</a>
                     <a href="#"><i class="fas fa-building me-2"></i> Construction Area</a>
-                    <a href="#"><i class="fas fa-users me-2"></i> Employees Database</a>
-                    <a href="#"><i class="fas fa-boxes me-2"></i> Material Database</a>
-                    <a href="#"><i class="fas fa-truck me-2"></i> Suppliers Details</a>
+                    <a href="Employee.html"><i class="fas fa-users me-2"></i> Employees Database</a>
+                    <a href="material.html"><i class="fas fa-boxes me-2"></i> Material Database</a>
+                    <a href="supplyinvoice.html"><i class="fas fa-truck me-2"></i> Suppliers Details</a>
                     <a href="#"><i class="fas fa-address-card me-2"></i> Customers Details</a>
                     <a href="#"><i class="fas fa-dollar-sign me-2"></i> Finance</a>
                 </div>
